--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A sample Node.js app using Express 4",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+	"ws": "4.0.0"
   },
   "engines": {
     "node": "4.0.0"
